--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shelby Brown</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/487af97aa2.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <section id="about-me">
@@ -45,7 +46,23 @@
                 <p class="about-me__info--para">
                     I'm a <strong class="text--purple">frontend software engineer</strong> with a strong passion for building responsive and performant web applications with great user experiences that positively impacts the world.
                 </p>
+                <div class="about-me__links">
+                    <a href="" class="about-me__link">
+                        <i class="fa-brands fa-linkedin-in"></i>
+                    </a>
+                    <a href="" class="about-me__link">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                    <a href="" class="about-me__link">
+                        <i class="fa-regular fa-envelope"></i>
+                    </a>
+                    <a href="" class="about-me__link">
+                        <i class="fa-regular fa-file-pdf"></i> 
+                    </a>
+                </div>
             </div>
+            <figure class="about-me__img--container">
+                <img src="./assets/undraw_websites.svg" class="about-me__img" alt="">
         </div>
     </div>
     </section>
