--- a/index.html
+++ b/index.html
@@ -1,70 +1,174 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shelby Brown</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/487af97aa2.js" crossorigin="anonymous"></script>
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/487af97aa2.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
     <section id="about-me">
-    <nav>
+      <nav>
         <div class="personal__logo">Shelby Brown</div>
         <ul class="nav__link--list">
-            <li>
-            <a href="" class="
-            nav__link--anchor
-            link__hover-effect
-            link__hover-effect--black
-            ">Languges</a>
-            </li>
-            <li>
-            <a href="" class="
-            nav__link--anchor
-            link__hover-effect
-            link__hover-effect--black
-            ">Project</a>
-            </li>
-            <li>
-            <a href="" class="
-            nav__link--anchor
-            nav__link--anchor-primary 
-            ">Contact</a>
-            </li>
+          <li>
+            <a
+              href=""
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              >Languges</a
+            >
+          </li>
+          <li>
+            <a
+              href=""
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              >Project</a
+            >
+          </li>
+          <li>
+            <a href="" class="nav__link--anchor nav__link--anchor-primary"
+              >Contact</a
+            >
+          </li>
         </ul>
-    </nav>
-    <div class="flex-1">
+      </nav>
+      <div class="flex-1">
         <div class="about-me__info row">
-            <div class="about-me__info--container">
-                <figure class="about-me__picture--mask">
-                    <img src="./assets/me.jpeg" class ="about-me__picture" alt="Picture of Me"> 
-                </figure>
-                <h1 class ="about-me__info--title">
-                    Hey! I'm <span class="text--purple">Shelby Brown</span>
-                </h1>
-                <p class="about-me__info--para">
-                    I'm a <strong class="text--purple">frontend software engineer</strong> with a strong passion for building responsive and performant web applications with great user experiences that positively impacts the world.
-                </p>
-                <div class="about-me__links">
-                    <a href="" class="about-me__link">
-                        <i class="fa-brands fa-linkedin-in"></i>
-                    </a>
-                    <a href="" class="about-me__link">
-                        <i class="fa-brands fa-github"></i>
-                    </a>
-                    <a href="" class="about-me__link">
-                        <i class="fa-regular fa-envelope"></i>
-                    </a>
-                    <a href="" class="about-me__link">
-                        <i class="fa-regular fa-file-pdf"></i> 
-                    </a>
-                </div>
+          <div class="about-me__info--container">
+            <figure class="about-me__picture--mask">
+              <img
+                src="./assets/me.jpeg"
+                class="about-me__picture"
+                alt="Picture of Me"
+              />
+            </figure>
+            <h1 class="about-me__info--title">
+              Hey! I'm <span class="text--purple">Shelby Brown</span>
+            </h1>
+            <p class="about-me__info--para">
+              I'm a
+              <strong class="text--purple">frontend software engineer</strong>
+              with a strong passion for building responsive and performant web
+              applications with great user experiences that positively impacts
+              the world.
+            </p>
+            <div class="about-me__links">
+              <a href="" class="about-me__link">
+                <i class="fa-brands fa-linkedin-in"></i>
+              </a>
+              <a href="" class="about-me__link">
+                <i class="fa-brands fa-github"></i>
+              </a>
+              <a href="" class="about-me__link">
+                <i class="fa-regular fa-envelope"></i>
+              </a>
+              <a href="" class="about-me__link">
+                <i class="fa-regular fa-file-pdf"></i>
+              </a>
             </div>
-            <figure class="about-me__img--container">
-                <img src="./assets/undraw_websites.svg" class="about-me__img" alt="">
+          </div>
+          <figure class="about-me__img--container">
+            <img
+              src="./assets/undraw_websites.svg"
+              class="about-me__img"
+              alt=""
+            />
+          </figure>
         </div>
-    </div>
+      </div>
     </section>
-</body>
+    <section id="languages">
+      <div class="container">
+        <div class="row">
+          <h1 class="section__title">This is my technology stack</h1>
+          <div class="language__list">
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                  alt=""
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name"></span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                  alt=""
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name"></span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                  alt=""
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name"></span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                  alt=""
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name"></span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                  alt=""
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name"></span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                  alt=""
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name"></span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                  alt=""
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name"></span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                  alt=""
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name"></span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
